[metadata]
name = flask-allows
version = 0.7.1
author = Alec Nikolas Reiter
author_email = alecreiter@gmail.com
description = Impose authorization requirements on Flask routes
long_description = file: README.rst, file: CHANGELOG
license = MIT
url = https://github.com/justanr/flask-allows
keywords =
    flask
    authorization
    permissions
project_urls =
    Code=https://github.com/justanr/flask-allows
    Issue Tracker=https://github.com/justanr/flask-allows/issues
    Documentation=https://flask-allows.readthedocs.io/en/latest/
classifiers =
    Development Status :: 4 - Beta
    Framework :: Flask
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = find:
package_dir = =src
include_package_data = True
zip_safe = False
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
install_requires = Flask

[options.packages.find]
where = src
exclude = test

[options.package_data]
 =
    LICENSE
    NOTICE
    README.rst
    CHANGELOG

[bdist_wheel]
universal = 1
